# google-breakpad-sys

./: .gitignore  Cargo.toml  Makefile.am  Makefile.in  breakpad-client-c.pc.in  build.rs  configure  configure.ac  ios.rs  lib.rs  linux.rs  windows.rs
binaries/: README.md  breakpad_client.def  breakpad_client_x64.lib  breakpad_client_x64_mingw.lib  breakpad_client_x86_mingw.lib
binaries/ios/: README.md
binaries/osx/: README.md
binaries/osx/Breakpad.framework/Resources/: Info.plist
binaries/osx/Breakpad.framework/Versions/A/: Breakpad
binaries/osx/Breakpad.framework/Versions/A/Resources/: Inspector
binaries/osx/Breakpad.framework/Versions/Current/Resources/: breakpadUtilities.dylib
src/client/linux/: breakpad_c.cc  breakpad_c.h
src/client/mac/: breakpad_c.cc  breakpad_c.h
src/client/mac/Breakpad.xcodeproj/: project.pbxproj
src/client/mac/breakpad_staticTests/: Info.plist
src/client/mac/handler/: exception_handler.h
src/client/mac/testapp/: Controller.m
src/client/windows/: breakpad_c.cc  breakpad_c.h  breakpad_client.gyp
