[package]

name = "libbreakpad-client-sys"
version = "0.1.0"
authors = ["Corey Richardson <corey@octayn.net>"]
links = "breakpad_client_c"
build = "build.rs"
repository = "https://github.com/cmr/google-breakpad"
license = "BSD"
description = "Native bindings to the google-breakpad library"

[lib]
name = "libbreakpad_client_sys"
path = "lib.rs"

[dependencies]
libc = "*"

[build-dependencies]
pkg-config = "*"
